style: update project images and descriptions for remaining projects

--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
       <div class="nav__background">
         <nav>
           <figure>
-            <img id="personal-logo" src="./assets/logo.png" alt="" />
+            <img id="personal-logo" src="./assets/logo.png" />
           </figure>
           <ul class="nav__link--list">
             <li class="nav__link click" onclick="toggleModal()">
               <a
                 href="#"
-                class="nav__link--anchor link__hover-effect link__hover-effect--black"
+                class="nav__link--anchor link__hover-effect link__hover-effect--yellow"
                 >About</a
               >
             </li>
             <li class="nav__link click">
               <a
                 href="#web-projects"
-                class="nav__link--anchor link__hover-effect link__hover-effect--black"
+                class="nav__link--anchor link__hover-effect link__hover-effect--yellow"
                 >Projects</a
               >
             </li>
             <li class="nav__link click" onclick="toggleModal()">
               <a
                 href="#"
-                class="nav__link--anchor link__hover-effect link__hover-effect--black"
+                class="nav__link--anchor link__hover-effect link__hover-effect--yellow"
                 >Contact</a
               >
             </li>
@@ -226,11 +226,7 @@
             <ul class="project__list">
               <li class="project">
                 <div class="project__wrapper">
-                  <img
-                    src="./assets/lantern-market.png"
-                    class="project__img"
-                    alt=""
-                  />
+                  <img src="./assets/lantern-market.png" class="project__img" />
                   <div class="project__wrapper--bg"></div>
                   <div class="project__description">
                     <h3 class="project__description--title">Lantern Market</h3>
@@ -282,11 +278,7 @@
               </li>
               <li class="project">
                 <div class="project__wrapper">
-                  <img
-                    src="./assets/medi-connect.png"
-                    class="project__img"
-                    alt=""
-                  />
+                  <img src="./assets/medi-connect.png" class="project__img" />
                   <div class="project__wrapper--bg"></div>
                   <div class="project__description">
                     <h3 class="project__description--title">
@@ -351,6 +343,62 @@
                   </div>
                 </div>
               </li>
+              <li class="project">
+                <div class="project__wrapper">
+                  <img src="./assets/hb-folio.png" class="project__img" />
+                  <div class="project__wrapper--bg"></div>
+                  <div class="project__description">
+                    <h3 class="project__description--title">HB Folio</h3>
+                    <h4 class="project__description--sub-title">
+                      HTML | CSS | JavaScript | Figma | Canva
+                    </h4>
+                    <p class="project__description--para">
+                      <b>HB Folio</b> is a well-structured yet minimalistic web
+                      application designed to showcase my web and mobile
+                      projects. It features a <b>responsive layout</b> and
+                      <b>smooth user interactions</b> to enhance usability while
+                      maintaining a clean and intuitive design. <br /><br />
+
+                      This web application incorporates
+                      <b>hover effects with transitions and transformations</b>,
+                      <b>smooth scrolling</b>, and <b>modal windows</b> to
+                      create a more dynamic and engaging navigation experience.
+                      Additionally, a <b>dark mode toggle</b>
+                      improves accessibility and allows users to customize their
+                      viewing preferences.
+                      <br /><br />
+
+                      Key implementations include: <br />
+                      - <b>JavaScript-powered modals</b> for project details
+                      <br />
+                      - A <b>custom interactive background</b> designed for
+                      enhanced user engagement <br />
+                      - <b>Lazy Loading optimization</b> to improve performance
+                      and loading speed
+                    </p>
+                    <div class="project__description--links">
+                      <a
+                        href="https://himchanbae.github.io/"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
+                        ><i class="fas fa-globe"></i
+                      ></a>
+                      <a
+                        href="https://github.com/HimchanBae/HimchanBae.github.io"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
+                        ><i class="fab fa-github"></i
+                      ></a>
+                      <a
+                        href="https://www.figma.com/design/GP9TuJkPOttMqCRXAtcnr3/Personal-Portfolio-Img?node-id=0-1&p=f&t=WCZ7yUSh2GTR6c8b-0"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
+                        ><i class="fab fa-figma"></i
+                      ></a>
+                    </div>
+                  </div>
+                </div>
+              </li>
             </ul>
             <a href="#mobile-projects" class="scroll"
               ><div class="scroll__icon"></div
@@ -371,7 +419,6 @@
                   <img
                     src="./assets/premium-fitness.png"
                     class="project__img"
-                    alt=""
                   />
                   <div class="project__wrapper--bg"></div>
                   <div class="project__description">
@@ -427,28 +474,50 @@
               </li>
               <li class="project">
                 <div class="project__wrapper">
-                  <img
-                    src="./assets/blinker mockup.png"
-                    class="project__img"
-                    alt=""
-                  />
+                  <img src="./assets/mac-queries.png" class="project__img" />
                   <div class="project__wrapper--bg"></div>
                   <div class="project__description">
-                    <h3 class="project__description--title">MacQ</h3>
+                    <h3 class="project__description--title">Mac Queries</h3>
                     <h4 class="project__description--sub-title">
-                      Html, CSS, JavaScript, Vue, Vuex
+                      Flutter | Firebase | Figma
                     </h4>
                     <p class="project__description--para">
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet, Lorem ipsum dolor sit amet,
-                      Lorem ipsum dolor sit amet,
+                      <b>Mac Queries</b> is a Q&A application for Macquarie
+                      University students, staff, and visitors. Built with
+                      <b>Flutter</b> and <b>Firebase Realtime Database</b>, it
+                      enables <b>real-time enquiry management</b>, allowing
+                      users to
+                      <b>create, edit, delete, and view enquiries</b> instantly.
+                      <br /><br />
+
+                      The project focused on
+                      <b
+                        >real-time data handling, authentication, and
+                        validation</b
+                      >. Role-based authentication enhanced security, while form
+                      validation ensured accurate user input, improving
+                      <b>data integrity and user experience</b>. <br /><br />
+
+                      In terms of design, I applied <b>Figma</b> and
+                      <b>design system principles</b>. I first established
+                      <b>design foundations</b> (color palette, typography,
+                      layout, and icon guidelines) for visual consistency. I
+                      also leveraged
+                      <b>Figma’s component and library features</b> (such as
+                      variable settings and naming conventions) to efficiently
+                      manage <b>reusable UI elements</b>.
                     </p>
                     <div class="project__description--links">
-                      <a href="#" class="project__description--link"
-                        ><i class="fas fa-globe"></i
-                      ></a>
-                      <a href="#" class="project__description--link"
+                      <a
+                        href="https://github.com/HimchanBae/Mac-Queries"
+                        class="project__description--link"
                         ><i class="fab fa-github"></i
+                      ></a>
+                      <a
+                        href="https://www.figma.com/design/hDK5wmhZrymvPfupwV9cGs/Mac-Queries?node-id=0-1&p=f&t=n0tOrUT2NeB3nzjZ-0"
+                        class="project__description--link link__hover-effect link__hover-effect--yellow"
+                        target="_blank"
+                        ><i class="fab fa-figma"></i
                       ></a>
                     </div>
                   </div>
@@ -463,11 +532,7 @@
       <div class="container">
         <div class="row footer__row">
           <figure>
-            <img
-              class="footer__logo--img"
-              src="./assets/footer-logo.png"
-              alt=""
-            />
+            <img class="footer__logo--img" src="./assets/footer-logo.png" />
           </figure>
           <div class="footer__social--list">
             <a
