docs: update resume with a new one

--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
               >Contact</a
             >
             <a
-              href="./assets/Himchan Bae Resume.pdf"
+              href="./assets/Himchan Bae CV.pdf"
               target="_blank"
               class="footer__social--link click link__hover-effect link__hover-effect--white"
               >Resume</a
