docs: update resume with a new CV

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               <i class="fa fa-github"></i
             ></a>
             <a
-              href="./assets/Himchan Bae Resume.pdf"
+              href="./assets/Himchan Bae CV.pdf"
               target="_blank"
               class="social__link click"
             >
